@@ -5,6 +5,7 @@
     README, man: update kernel polling instructions #403
     look in applications subdirs for .desktop file; debug info #405
     clear g_ascii_strcasecmp warning on owner sort
+    case insensitive app sort, tooltips, uniq in app chooser dialog #405
 0.9.2   2013-12-06:
     README correct packages link
     manual note full/max col widths not saved #382
